--- a/layouts/index.html
+++ b/layouts/index.html
@@ -10,9 +10,9 @@
     <article class="post">
         {{ partial "post/info.html" . }}
         {{ if or (.Site.Params.noSummary) (.Params.noSummary) }}
-        {{ .Content }}
+        {{ .Content | markdownify }}
         {{ else }}
-        {{ .Content }}
+        {{ .Summary | markdownify }}
         {{ if .Truncated }}
         <div class="read-more-link">
             <a href="{{ .RelPermalink }}">Read More…</a>
