--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,9 +1,5 @@
 {{ define "main" -}}
 
-<div class="home-content">
-    {{ .Content }}
-</div>
-
 <div class="posts">
     {{ $frontPageTypes := default (slice "posts") .Site.Params.front_page_content }}
     {{ range (.Paginate (where .Site.RegularPages "Type" "in" $frontPageTypes)).Pages }}
@@ -12,7 +8,7 @@
         {{ if or (.Site.Params.noSummary) (.Params.noSummary) }}
         {{ .Content | markdownify }}
         {{ else }}
-        {{ .Summary | markdownify }}
+        {{ .Summary }}
         {{ if .Truncated }}
         <div class="read-more-link">
             <a href="{{ .RelPermalink }}">Read More…</a>
